# wgpu-engine-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  bench.rs  camera.rs  collision.rs  gui.rs  input.rs  main.rs  old_main.rs  shader.txt  shader.wgsl  simd_bench.rs  wgpu_ctx.rs
