[build]
rustflags = "-C target-cpu=native"

[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# rayon = "1.10.0"
wide = { version = "0.7.32", features = ["std"] }
winit = { version = "0.30.8" }
pollster = { version = "0.4" }
wgpu = { version = "24.0.1" }
hecs = "0.10.5"
bytemuck = { version = "1.21", features = ["derive"] }
rand = "0.9.0"
