[build]
rustflags = "-C target-cpu=native"

[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# # rayon = "1.10.0"
# winit = { version = "0.30.8" }
# pollster = { version = "0.4" }
# wgpu = { version = "24.0.1" }
# hecs = "0.10.5"
# bytemuck = { version = "1.21", features = ["derive"] }
# rand = "0.9.0"

imgui-wgpu = { path = "./lib/imgui-wgpu-rs" }
imgui = "0.12"
log = "0.4"
smallvec = "1"
wgpu = "24.0.1"
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["png"] }
imgui-winit-support = "0.13"
pollster = "0.4"
raw-window-handle = "0.6"
winit = "0.30"
input-actions = { path = "input-actions", features = ["winit"] }
# futures-signals = "0.3.34"

hecs = "0.10.5"
rand = "0.9.0"

# [work]